--- a/src/PROCERGS/LoginCidadao/CoreBundle/Resources/public/css/logged/logged.css
+++ b/src/PROCERGS/LoginCidadao/CoreBundle/Resources/public/css/logged/logged.css
@@ -530,23 +530,6 @@ body.no-scroll {
     padding-left: 0;
 }
 
-.fos_oauth_server_authorize .connect-diagram {
-    margin: 30px 0;
-}
-
-.fos_oauth_server_authorize .connect-diagram .glyphicon.glyphicon-chevron-right {
-    font-size: 25px;
-    margin: 30px 0;
-}
-
-.fos_oauth_server_authorize .connect-diagram {
-    font-size: 17px;
-}
-
-.fos_oauth_server_authorize .buttons.row {
-    margin-top: 20px;
-}
-
 .app-admin .table-bordered, .app-admin .table-bordered td, .app-admin .table-bordered th {
     border-color: #000;
 }
